@@ -1,9 +1,6 @@
 server {
-    listen 4433 ssl http2;
-    server_name _;
-
-    ssl_certificate         /etc/nginx/ssl/self-signed-wlanpi.cert;
-    ssl_certificate_key     /etc/nginx/ssl/self-signed-wlanpi.key;
+    listen 8081;
+    server_name localhost;
 
     root /var/www/librespeed;
 
@@ -24,7 +21,7 @@ server {
         access_log off; 
         log_not_found off; 
     }
-    
+
     location /getip {
         add_header "Cache-Control" "no-store, no-cache, must-revalidate, max-age=0, s-maxage=0";
         add_header "Cache-Control" "post-check=0, pre-check=0";
@@ -50,7 +47,7 @@ server {
         add_header "Cache-Control" "post-check=0, pre-check=0";
         add_header "Pragma" "no-cache";
         add_header "Connection" "keep-alive";
-        client_max_body_size 256M;
+        client_max_body_size 30M;
         error_page 405 =200 $uri;
     }
 
@@ -62,3 +59,41 @@ server {
         add_header Pragma no-cache;
     }
 }
+
+# upstream librespeed_test {
+#     server 127.0.0.1:8081;
+# }
+
+# server {
+#     listen 4433 ssl http2;
+#     server_name localhost;
+#     ssl_certificate /etc/nginx/ssl/self-signed-wlanpi.cert;
+#     ssl_certificate_key /etc/nginx/ssl/self-signed-wlanpi.key;
+#     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_prefer_server_ciphers on;
+#     ssl_session_tickets off;
+#     ssl_session_timeout 60m;
+
+#     location = /favicon.ico { 
+#         access_log off; 
+#         log_not_found off; 
+#     }
+    
+#     location / {
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header Host $http_host;
+#         client_max_body_size 30M;
+#         proxy_buffering off;
+#         proxy_pass http://librespeed_test;
+
+#         # client_max_body_size 30M;
+#         # proxy_buffering off;
+#         # proxy_pass http://127.0.0.1:8081;
+#         # proxy_set_header Host $host;
+#         # proxy_set_header X-Real-IP $remote_addr;
+#         # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         # proxy_set_header X-Forwarded-Proto https;
+#     }
+# }
