@@ -3,6 +3,10 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
+upstream librespeed {
+    server 127.0.0.1:8081;
+}
+
 upstream grafana {
     server 127.0.0.1:3000;
 }
@@ -13,14 +17,14 @@ upstream webui {
 
 server {
     listen 443 ssl http2;
-    server_name _;
+    server_name localhost;
     ssl_certificate /etc/nginx/ssl/self-signed-wlanpi.cert;
     ssl_certificate_key /etc/nginx/ssl/self-signed-wlanpi.key;
     ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_session_timeout 30m;
-    ssl_session_cache shared:SSL:30m;
-    add_header Strict-Transport-Security max-age=15768000;
+    ssl_prefer_server_ciphers on;
+    ssl_session_tickets off;
+    ssl_session_timeout 60m;
     add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
 
     access_log /var/log/webui_access.log;
@@ -43,15 +47,18 @@ server {
         proxy_set_header Host $http_host;
         # we don't want nginx trying to do something clever with
         # redirects, we set the Host: header above already.
-        proxy_pass https://webui;
+        proxy_pass http://webui;
     }
 
-    location /app/librespeed/ {
-        proxy_pass https://127.0.0.1:4433/;
-        proxy_set_header Host $host;
+    location /app/librespeed/  {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        client_max_body_size 30M;
+        proxy_buffering off;
+        proxy_pass http://librespeed/;
     }
-
+    
     location /app/grafana/ {
         proxy_set_header Host $http_host;
         proxy_pass https://grafana;
