@@ -38,7 +38,7 @@
             </div>
         </div>
         <div uk-sticky="position: bottom" class="uk-dark uk-background-muted uk-padding-small">
-            <p class="uk-text-center">Built with <a href="https://hyperscript.org/" target="_blank" title="_hyperscript: An easy & approachable language for modern web front-ends" data-uk-tooltip>///_hyperscript</a>, <a href="https://fastapi.tiangolo.com/" target="_blank" title="FastAPI framework, high performance, easy to learn, fast to code, ready for production" data-uk-tooltip><span uk-icon="bolt"></span> FastAPI</a>, <a href="https://flask.palletsprojects.com/" target="_blank" title="Flask; web development, one drop at a time" data-uk-tooltip>Flask</a>, JavaScript, <a href="https://www.python.org/" title="Visit Python" target="_blank" data-uk-tooltip>Python</a>, <a href="https://htmx.org/" title="Visit htmx" target="_blank_" data-uk-tooltip>&lt;/&gt; htmx</a>, and <a href="http://getuikit.com" title="Visit UIkit" target="_blank" data-uk-tooltip>UIkit <span data-uk-icon="uikit"></span></a></p>
+            <p class="uk-text-center">Built with <a href="https://hyperscript.org/" target="_blank" title="_hyperscript: An easy & approachable language for modern web front-ends" data-uk-tooltip>///_hyperscript</a>, <a href="https://fastapi.tiangolo.com/" target="_blank" title="FastAPI framework, high performance, easy to learn, fast to code, ready for production" data-uk-tooltip><span uk-icon="bolt"></span> FastAPI</a>, <a href="https://flask.palletsprojects.com/" target="_blank" title="Flask; web development, one drop at a time" data-uk-tooltip>Flask</a>, <a href="https://www.python.org/" title="Visit Python" target="_blank" data-uk-tooltip>Python</a>, <a href="https://htmx.org/" title="Visit htmx" target="_blank_" data-uk-tooltip>&lt;/&gt; htmx</a>, and <a href="http://getuikit.com" title="Visit UIkit" target="_blank" data-uk-tooltip>UIkit <span data-uk-icon="uikit"></span></a></p>
         </div>
     </div>
 </div>
